# ChessPlusPlus

./: CMakeLists.txt  README.md  chess++
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake
src/app/: CMakeLists.txt
src/app/include/: game_loop.hpp  input.hpp  renderer.hpp  ui_layout.hpp  ui_panels.hpp
src/app/src/: game_loop.cpp  input.cpp  main.cpp  renderer.cpp  ui_panels.cpp
src/core/: CMakeLists.txt
src/core/include/: board.hpp  game.hpp  logging.hpp  movegen.hpp  pgn.hpp  square_constants.hpp  types.hpp
src/core/src/: board.cpp  game.cpp  movegen.cpp  pgn.cpp
src/engine/: CMakeLists.txt
src/engine/include/: engine.hpp  evaluator.hpp  search.hpp
src/engine/src/: engine.cpp  evaluator.cpp  search.cpp
tests/: CMakeLists.txt  board_test.cpp  game_test.cpp  movegen_test.cpp  movelist_test.cpp  pgn_test.cpp  search_test.cpp
